"SCRUM-14 FE | Integrate API to create leave request forms."

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jspdf": "^3.0.4",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
     "react-toastify": "^11.0.5",
