--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,8 @@ jobs:
           username: root
           key: ${{ secrets.VPS_SSH_KEY }}
           source: "dist/*"
-          target: "/var/www/lng-hr-fe"
+          target: "/var/www/lng-hr-fe/"
+          strip_components: 1
 
       # 7️⃣ Reload Nginx
       - name: Reload Nginx
