SCRUM-46 FE | Build Case notification

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 # VITE_API_BASE_URL=https://api-hr.lngmerch.co/
+
+# WebSocket URL cho real-time notifications
+# REST API endpoint: GET /api/notifications (lấy danh sách)
+# Socket.IO: Kết nối đến namespace mặc định "/"
+# Development: http://localhost:3000
+# Production: https://api-hr.lngmerch.co
+VITE_SOCKET_URL=https://api-hr.lngmerch.co
