--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "dompurify": "^3.3.1",
+    "express": "^5.2.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.556.0",
@@ -28,6 +29,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5"
   },
